Implement 10 changes: Add Support for Custom Firing Strategies, Implement Graphical User Interface (GUI), Enhance Ship Placement Validation, Add Battlefield Size Validation, Introduce Game Replay Functionality, Improper Input Validation in Battlefield Size, Predictable Random Number Generation, Lack of Input Sanitization for Ship Coordinates, Hardcoded Error Messages in Exceptions, Incomplete CI/CD Security Configuration