@@ -5,7 +5,6 @@ import com.game.exception.OutOfAreaException;
 import com.game.exception.PositionOverlapException;
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -14,25 +13,33 @@ class ShipPositionValidatorTest {
 
     @Test
     void testValidatePositionWithinBounds() {
-        List<CoordinatePair> occupied = Arrays.asList(new CoordinatePair(2, 2), new CoordinatePair(3, 3));
-        ShipPositionValidator validator = new ShipPositionValidator(occupied);
+        List<CoordinatePair> occupiedCoordinates = List.of(new CoordinatePair(2, 2));
+        ShipPositionValidator validator = new ShipPositionValidator(occupiedCoordinates);
+        CoordinatePair topLeft = new CoordinatePair(0, 0);
+        CoordinatePair bottomRight = new CoordinatePair(1, 1);
 
-        assertDoesNotThrow(() -> validator.validatePosition(new CoordinatePair(0, 0), new CoordinatePair(1, -1), 5));
+        assertDoesNotThrow(() -> validator.validatePosition(topLeft, bottomRight, 5));
     }
 
     @Test
     void testValidatePositionOutOfBounds() {
-        List<CoordinatePair> occupied = Arrays.asList(new CoordinatePair(2, 2), new CoordinatePair(3, 3));
-        ShipPositionValidator validator = new ShipPositionValidator(occupied);
+        List<CoordinatePair> occupiedCoordinates = List.of(new CoordinatePair(2, 2));
+        ShipPositionValidator validator = new ShipPositionValidator(occupiedCoordinates);
+        CoordinatePair topLeft = new CoordinatePair(-1, 0);
+        CoordinatePair bottomRight = new CoordinatePair(1, 1);
 
-        assertThrows(OutOfAreaException.class, () -> validator.validatePosition(new CoordinatePair(4, 4), new CoordinatePair(6, 2), 5));
+        OutOfAreaException exception = assertThrows(OutOfAreaException.class, () -> validator.validatePosition(topLeft, bottomRight, 5));
+        assertEquals("Coordinates are out of the allowed area.", exception.getMessage());
     }
 
     @Test
     void testValidatePositionOverlap() {
-        List<CoordinatePair> occupied = Arrays.asList(new CoordinatePair(2, 2), new CoordinatePair(3, 3));
-        ShipPositionValidator validator = new ShipPositionValidator(occupied);
+        List<CoordinatePair> occupiedCoordinates = List.of(new CoordinatePair(1, 1));
+        ShipPositionValidator validator = new ShipPositionValidator(occupiedCoordinates);
+        CoordinatePair topLeft = new CoordinatePair(0, 0);
+        CoordinatePair bottomRight = new CoordinatePair(2, 2);
 
-        assertThrows(PositionOverlapException.class, () -> validator.validatePosition(new CoordinatePair(2, 2), new CoordinatePair(3, 1), 5));
+        PositionOverlapException exception = assertThrows(PositionOverlapException.class, () -> validator.validatePosition(topLeft, bottomRight, 5));
+        assertEquals("Position overlap detected. Please check the ship coordinates.", exception.getMessage());
     }
 }
